--- a/css/main.css
+++ b/css/main.css
@@ -3,3 +3,19 @@
     background-color: yellow;
     margin-bottom: 0px;
 }
+footer{
+    padding: 10px 10px 0 10px;
+    background-color: yellow;
+    margin-bottom: 0px;
+    margin-top: 10px;
+}
+
+.card-hotel {
+    flex: 1 150px;
+    padding: 2px 5px 2px 2px;
+    margin-top: 10px;
+}
+
+.btn-reserva{
+    width: 100%;
+}
