use card in hotel and added tarjetas plus folder images with card

--- a/css/main.css
+++ b/css/main.css
@@ -2,11 +2,6 @@ jumbotron{
     margin-top: 60px;
 }
 
-.footer{
-    padding: 10px 10px 0 10px;
-    background-color: yellow;
-    margin-bottom: 0px;
-}
 footer{
     padding: 10px 10px 0 10px;
     background-color: yellow;
@@ -15,13 +10,14 @@ footer{
 }
 
 .card-hotel {
-    flex: 1 150px;
-    padding: 2px 5px 2px 2px;
+    flex: 1 200px;
+    /* padding: 2px 0px 2px 0px; */
     margin-top: 10px;
 }
 
 .btn-reserva{
     width: 100%;
+    border-radius: 0px;
 }
 
 .footer-address-icon{
